--- a/templates/popup.html
+++ b/templates/popup.html
@@ -27,7 +27,8 @@
     </label>
 
     <!-- Play Mode (우측) -->
-    <div class="abgm-top-item right" style="min-width:160px;">
+    <div class="abgm-top-item right" style="min-width:200px;">
+      <small style="opacity:.85;">Play Mode</small>
       <select id="abgm_playMode" class="abgm-select abgm-select-slim" title="Works when Keyword Mode is OFF">
         <option value="manual">Manual</option>
         <option value="loop_one">Loop One</option>
@@ -35,7 +36,6 @@
         <option value="random">Random</option>
       </select>
     </div>
-
   </div>
 
   <!-- 2줄: Global Volume -->
