--- a/templates/popup.html
+++ b/templates/popup.html
@@ -89,6 +89,9 @@
   <div class="menu_button" id="abgm_bind_open" title="Bind this preset to character cards">
     <i class="fa-solid fa-link"></i> Bind
   </div>
+<div class="menu_button" id="abgm_preset_help_toggle" title="Preset help">
+  <i class="fa-solid fa-book"></i>
+</div>
 
   <!-- 오른쪽으로 밀기 -->
   <div class="abgm-row" style="gap:10px; margin-left:auto; flex-wrap:wrap; align-items:center;">
@@ -101,9 +104,9 @@
 
 <hr class="abgm-hr"/>
 
-        <div class="abgm-minihelp">
-          프리셋은 “채팅별 세팅 묶음”이라고 보면 됨<br/>
-          (나중에 캐릭터/채팅 id랑 연결할 자리)
+        <div class="abgm-minihelp" id="abgm_preset_help" style="display:none;">
+          프리셋은 설명<br/>
+          어쩌고저쩌고
         </div>
       </section>
 
